src/main/java/com/example/credit_service_project/service/errors/exceptions/OperationNotFoundException.java
package com.example.credit_service_project.service.errors.exceptions;

public class OperationNotFoundException extends RuntimeException {
    public OperationNotFoundException(String message) {
        super(message);
    }
}
